# fluffy-guide

./: .gitattributes  .gitignore  CLAUDE.md  NOTES.md  README.md  demo.ps1  pyproject.toml
.github/workflows/: gate.yml
docs/: GO_LIVE.md  INSTALL.md  USER_GUIDE.md
examples/lores/clockwork-coast/: 01_the_tide_tower.delta.json  02_the_glass_foundry.delta.json  03_the_equinox_chime.delta.json
examples/lores/harrow-hollow/: 01_the_apprentice.delta.json  02_the_chapel_clock.delta.json
examples/lores/winnie-the-pooh/: 01_pooh_and_some_bees.delta.json
src/lore_stack/: cli.py  frozen.py  lores.py  registry.py  snapshots.py  staging.py
src/lore_stack/compiler/: __init__.py  compile.py
src/lore_stack/db/: __init__.py  connection.py  migration_0002_predicates.sql  migration_0003_staging.sql  migration_0004_merge_suggestions.sql  migration_0005_supersession.sql  migration_0006_chunk_staleness.sql  migration_0007_entity_exclusions.sql  migration_0008_entity_merge.sql  migrations.py  predicates.json  schema.sql
src/lore_stack/hermes/: SKILL.md
src/lore_stack/hermes/extraction/: SKILL.md
src/lore_stack/hermes/scripts/: lore_skill.ps1  lore_skill.sh
src/lore_stack/hermes/storage/: SKILL.md
src/lore_stack/models/: __init__.py  delta.py
src/lore_stack/retrieval/: __init__.py  cosine.py  fts.py  fusion.py
src/lore_stack/seams/: __init__.py  embedder.py  extractor.py
src/lore_stack/visualizer/: app.py
src/lore_stack/visualizer/static/: index.html
src/lore_stack/writeback/: __init__.py  engine.py
src/lore_stack_adapters/: __init__.py  anthropic_extractor.py  ollama_embedder.py  openai_embedder.py
tests/: conftest.py  invariant_checks.py  test_a_bootstrap.py  test_adversarial.py  test_authoritative.py  test_b_ingest_boxwell.py  test_c_corroboration.py  test_chunk_staleness.py  test_cli_golive.py  test_d_alias_resolution.py  test_demo_seeds.py  test_e_relationships.py  test_embedder_parity.py  test_entity_merge.py  test_exclusions.py  test_f_contradiction.py  test_frozen.py  test_g_keyed_retrieval.py  test_golden.py  test_h_semantic_retrieval.py  test_i_budget.py  test_init_hermes.py  test_invariants.py  test_j_hermes_stub.py  test_merge.py  test_ollama_embedder.py  test_phase2_parity.py  test_property.py  test_registry.py  test_relationship_ontology.py  test_snapshots.py  test_staging.py  test_supersession.py  test_visualizer.py
tests/fixtures/adversarial/: malformed.json  missing_fields.json  unknown_fields.json
tests/fixtures/golden/: golden_context_boxwell.txt
tests/fixtures/stories/: boxwell_story_01.delta.json  boxwell_story_01.md  boxwell_story_02.delta.json  boxwell_story_02.md  boxwell_story_03.delta.json  boxwell_story_03.md  boxwell_story_04.delta.json  boxwell_story_04.md  boxwell_story_05.delta.json  boxwell_story_05.md  boxwell_story_06.delta.json  boxwell_story_06.md
(+3 files in other folders)
