[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-stack"
version = "0.1.0"
description = "Deterministic lore-memory substrate: SQLite-backed ingest, conservative canonization, hybrid retrieval, and bounded context compilation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
]
anthropic = [
    "anthropic>=0.40",
]
embeddings = [
    "openai>=1.0",
]
ollama = [
    "ollama>=0.3",
]

[project.scripts]
lore-stack = "lore_stack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lore_stack = [
    "db/*.sql",
    "db/*.json",
    "visualizer/static/*",
    "hermes/extraction/*.md",
    "hermes/extraction/references/*",
    "hermes/storage/*.md",
    "hermes/storage/scripts/*",
]

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-ra"]
markers = [
    "model: live or recorded model tests (excluded from the deterministic gate)",
    "unit: focused single-module logic / validation tests",
    "integration: multi-component, DB-driven flows",
    "golden: byte-determinism / golden-file acceptance tests",
    "migration: schema bootstrap and seeded-upgrade tests",
    "property: Hypothesis property tests (derandomized for the gate)",
    "smoke: end-to-end smoke checks",
    "perf: performance / latency checks (lane reserved; excluded from the gate)",
    "manual: tests that require manual setup or are run on demand",
    "slow: long-running tests",
]
testpaths = ["tests"]
# Lanes are assigned by module in tests/conftest.py (pytest_collection_modifyitems),
# so `pytest -m unit` / `-m integration` / etc. select without decorating every file.
# The deterministic gate stays `pytest -m "not model"`.
